Migration to Spark 2.2.0 and scala 2.11.11